--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -13,27 +13,36 @@
 \usepackage{graphicx}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{titlesec}
+\usepackage{tcolorbox} % ✅ Added for rounded colored boxes
 
 \usepackage{fontawesome}
 \usepackage{xcolor}
 
 \setlength{\parindent}{0pt}
 
-% ==== Colored section titles ====
-\titleformat{\section}
-  {\large\bfseries\color{black}} % Default color, overridden by *colored commands below
-  {}
-  {0pt}
-  {}[\vspace{-0.2cm}\rule{\textwidth}{2pt}]
-\titlespacing*{\section}{0pt}{15pt}{0pt}
+% ==== Rounded colored section titles ====
+\newcommand{\SectionBox}[1]{%
+\vspace{6pt}
+\begin{tcolorbox}[
+    colback=blue!15,    % background color
+    colframe=blue!15,   % border same as background
+    boxrule=0pt,        % no visible border
+    arc=8pt,            % rounded corners
+    left=6pt, right=6pt, top=2pt, bottom=2pt,
+    width=\textwidth,   % full width
+]
+\textbf{\large #1}
+\end{tcolorbox}
+\vspace{-1pt}
+}
 
-% Colored section commands
-\newcommand{\ProfileSection}[0]{\section*{\textcolor{blue}{Profile}}}
-\newcommand{\EducationSection}[0]{\section*{\textcolor{red}{Education}}}
-\newcommand{\ExperienceSection}[0]{\section*{\textcolor{green}{Professional Experience}}}
-\newcommand{\ProjectsSection}[0]{\section*{\textcolor{orange}{Projects}}}
-\newcommand{\CertificationsSection}[0]{\section*{\textcolor{purple}{Certifications}}}
-\newcommand{\LanguagesSection}[0]{\section*{\textcolor{teal}{Languages}}}
+% ==== Section commands with same style ====
+\newcommand{\ProfileSection}[0]{\SectionBox{PROFILE}}
+\newcommand{\EducationSection}[0]{\SectionBox{EDUCATION}}
+\newcommand{\ExperienceSection}[0]{\SectionBox{PROFESSIONAL EXPERIENCE}}
+\newcommand{\ProjectsSection}[0]{\SectionBox{PROJECTS}}
+\newcommand{\CertificationsSection}[0]{\SectionBox{CERTIFICATIONS}}
+\newcommand{\LanguagesSection}[0]{\SectionBox{LANGUAGES}}
 
 \begin{document}
 \pagestyle{empty} 
@@ -44,10 +53,10 @@
 \end{textblock*}
 
 % ==== Header ====
-{\Huge\bfseries AZIZ BELHADJ SAYAR}\\[2pt]
-{\large Computer Science Student}\\[2pt]
+{\Huge\bfseries AZIZ BELHADJ SAYAR}\\[10pt]
+{\fontsize{18pt}{18pt}\selectfont Computer Science Student}\\
 
-\vspace{-0.2cm}
+\vspace{-0.1cm}
 % ==== Contact ====
 \renewcommand{\arraystretch}{0.9}
 \setlength{\tabcolsep}{6pt}
@@ -55,12 +64,10 @@
 {\fontsize{9.5}{10}\selectfont
 \begin{tabular*}{0.6\textwidth}{@{\extracolsep{\fill}} l l l}
     \faPhone +33 6 52 64 32 02 &
-    \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}{ linkedin.com/in/azizbelhadjsayar} &
-    \faEnvelope \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{ aziz.belhadjsayar@etud.univ-evry.fr} \\
+    \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}{linkedin.com/in/azizbelhadjsayar} &
+    \faEnvelope \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{aziz.belhadjsayar@etud.univ-evry.fr} \\
     \faMapMarker Paris, France &
-    \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} \\
-    
-    % \faLink \href{https://portfolio.aziz.dev}{ portfolio.aziz.dev} \\
+    \faGithub \href{https://github.com/azizbelhadjsayar}{github.com/azizbelhadjsayar} \\
 \end{tabular*}
 }
 
